--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
+<!doctype html>
 <html>
-
+  <head>
+    <!-- Include your JavaScript file -->
+    <script type="text/javascript" src="./script.js"></script>
+    <!-- Include your CSS file -->
+    <link rel="stylesheet" href="./style.css" />
+  </head>
   <body>
-    <h1>Hello World</h1>
+    <!-- SVG element for visualization -->
+    <svg preserveAspectRatio="none" version="1.1" viewBox="0 0 255 255">
+      <!-- Define mask and gradient -->
+      <defs>
+        <mask id="mask" />
+        <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+          <stop stop-color="#fff" stopOpacity="1" />
+        </linearGradient>
+      </defs>
+      <!-- Rectangle to fill SVG canvas with gradient and apply mask -->
+      <rect x="0" y="0" width="100%" height="100%" fill="url(#gradient)" mask="url(#mask)"></rect>
+    </svg>
   </body>
-  
 </html>
