--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <!-- Include your JavaScript file -->
     <script type="text/javascript" src="./script.js"></script>
     <!-- Include your CSS file -->
-    <link rel="stylesheet" href="./css/style.css" />
-  </head> 
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
   <body>
     <!-- SVG element for visualization -->
     <svg preserveAspectRatio="none" version="1.1" viewBox="0 0 255 255">
