--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Include your JavaScript file -->
     <script type="text/javascript" src="./script.js"></script>
     <!-- Include your CSS file -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- SVG element for visualization -->
