--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- Include your JavaScript file -->
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/demo.js"></script>
     <!-- Include your CSS file -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
