--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
+
 <!doctype html>
 <html>
-  <head>
-    <!-- Include your JavaScript file -->
-    <script type="text/javascript" src="js/demo.js"></script>
-    <!-- Include your CSS file -->
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <!-- SVG element for visualization -->
-    <svg preserveAspectRatio="none" version="1.1" viewBox="0 0 255 255">
-      <!-- Define mask and gradient -->
-      <defs>
-        <mask id="mask" />
-        <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-          <stop stop-color="#fff" stopOpacity="1" />
-        </linearGradient>
-      </defs>
-      <!-- Rectangle to fill SVG canvas with gradient and apply mask -->
-      <rect x="0" y="0" width="100%" height="100%" fill="url(#gradient)" mask="url(#mask)"></rect>
-    </svg>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+
+<!--   <title>Pitch Detection</title> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
+  <script src="https://unpkg.com/ml5@0.1.2/dist/ml5.min.js" type="text/javascript"></script>
+
+</head>
+
+<body>
+  <h1>Pitch Detection Example</h1>
+   <p id='status'>Loading Model...</p> 
+   <p id='result'>No pitch detected</p>
+  <script src="js/sketch.js"></script>
+</body>
+
 </html>
