--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
-
 <!doctype html>
-<html>
+<!-- You can use this link as well to call wavesurfer.js. This is what's given on their updated documentation-->
+<!-- <script src="https://unpkg.com/wavesurfer.js"></script> -->
 
 <head>
-  <meta charset="UTF-8">
-
-<!--   <title>Pitch Detection</title> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
-  <script src="https://unpkg.com/ml5@0.1.2/dist/ml5.min.js" type="text/javascript"></script>
-
+  <title>Test Website</title>
 </head>
 
 <body>
-  <h1>Pitch Detection Example</h1>
-   <p id='status'>Loading Model...</p> 
-   <p id='result'>No pitch detected</p>
-  <script src="js/sketch.js"></script>
+  <!-- Adding wavesurfer.js script -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.2.3/wavesurfer.min.js"></script>
+  
+  <h1>Wavesurfer Test</h1>
+  
+  <!-- !-- Create a container where the waveform is to appear-->
+  <div id="waveform"></div>
+  
+  <script src="js/main.js" defer="defer"></script>
+  <script src="js/test.js"></script>
 </body>
 
 </html>
