--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- !-- Create a container where the waveform is to appear-->
   <div id="waveform"></div>
   
-  <script src="js/main.js" defer="defer"></script>
+  <!-- <script src="js/main.js" defer="defer"></script> -->
   <script src="js/test.js"></script>
 </body>
 
