--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   
   <!-- !-- Create a container where the waveform is to appear-->
   <div id="waveform"></div>
+
+  <div id="waveform2"></div>
   
   <!-- <script src="js/main.js" defer="defer"></script> -->
   <script src="js/test.js"></script>
