--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- You can use this link as well to call wavesurfer.js. This is what's given on their updated documentation-->
-<!-- <script src="https://unpkg.com/wavesurfer.js"></script> -->
+<script src="https://unpkg.com/wavesurfer.js"></script>
 
 <head>
   <title>Test Website</title>
