--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Adding wavesurfer.js script -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.2.3/wavesurfer.min.js"></script>
   <script src="https://unpkg.com/wavesurfer.js@7/dist/plugins/spectrogram.esm.js"></script>
-  
+  <script src = "js/spec.js"></script>
   <h1>Wavesurfer Test</h1>
   
   <!-- !-- Create a container where the waveform is to appear-->
