--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<html>
 <!-- You can use this link as well to call wavesurfer.js. This is what's given on their updated documentation-->
 
 <head>
