--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!doctype html>
 <!-- You can use this link as well to call wavesurfer.js. This is what's given on their updated documentation-->
 
 <head>
@@ -7,9 +7,8 @@
 
 <body>
   <!-- Adding wavesurfer.js script -->
-  <script src="https://unpkg.com/wavesurfer.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.2.3/wavesurfer.min.js"></script>
+  <script src="https://unpkg.com/wavesurfer.js@7"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.2.3/wavesurfer.min.js"></script> -->
   <script src="https://unpkg.com/wavesurfer.js@7/dist/plugins/spectrogram.esm.js"></script>
   <script src = "js/spec.js"></script>
   <h1>Wavesurfer Test</h1>
