--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       });
       
       //Loading the audio file you want to play
-      // wavesurfer.load('satie.mp3');
+      wavesurfer.load('satie.mp3');
       
       wavesurfer.registerPlugin(
         Spectrogram.create({
