--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       
 
       const wavesurfer = WaveSurfer.create({
-  container: document.body,
+  container: '#waveform',
   waveColor: 'rgb(200, 0, 200)',
   progressColor: 'rgb(100, 0, 100)',
   url: './satie.mp3',
