--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
   waveColor: 'rgb(200, 0, 200)',
   progressColor: 'rgb(100, 0, 100)',
   url: '/examples/audio/audio.wav',
-
+  plugins: [
+    Hover.create({
+      lineColor: '#ff0000',
+      lineWidth: 2,
+      labelBackground: '#555',
+      labelColor: '#fff',
+      labelSize: '11px',
+    }),
+  ],
   // Set a bar width
   barWidth: 2,
   // Optionally, specify the spacing between bars
