--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="https://unpkg.com/wavesurfer.js@7"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.2.3/wavesurfer.min.js"></script> -->
     <script src="https://unpkg.com/wavesurfer.js@7/dist/plugins/regions.min.js"></script>
+    <script src="https://unpkg.com/wavesurfer.js@7/dist/plugins/hover.min.js"></script>
     <h1>Wavesurfer Test</h1>
   
   <!-- !-- Create a container where the waveform is to appear-->
