--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   barRadius: 2,
 })
 //Loading the audio file you want to play
-wavesurfer.load('satie.mp3');
+wavesurfer.load('great.wav');
 
 // Initialize the Spectrogram plugin
 // ws.registerPlugin(
