--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     color: #ff0000;
 }
       </style>
-    <script type="module" src = "js/import">
+    <script type="module" src = "js/import.js">
     </script>
     </head>
   <body>
