--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </style>
     <script type="module" src = "js/import.js">
     </script>
+    <script src = "https://wavesurfer.xyz/example/spectrogram/app.js"></script>
     </head>
   <body>
 
